# ChangeLog for sys-apps/openrc
# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sys-apps/openrc/ChangeLog,v 1.43 2008/10/08 16:19:11 cardoe Exp $

*openrc-0.3.0.20081113 (20 Nov 2008)

  20 Nov 2008; Daniel Robbins <drobbins@funtoo.org>
  +openrc-0.3.0.20081113.ebuild: new ebuild that has some OpenVZ fixes
  and uses new udev-132-r1.ebuild with new /etc/init.d/udev initscript.
  Lots of tweaks to (hopefully) get this to install correctly with 
  the new udev and the new sysvinit-2.86-r11.

*openrc-0.3.0-r1 (08 Oct 2008)

  08 Oct 2008; Doug Goldstein <cardoe@gentoo.org>
  -files/openrc-0.2.4-start-nodep.patch,
  +files/0.3.0/0006-Fix-tests-Gentoo-240350.patch,
  +files/0.3.0/0007-Fix-utmp-permissions-Gentoo-240437.patch,
  +files/0.3.0/0008-Clean-up-warnings-regarding-printf.patch,
  -openrc-0.3.0.ebuild, +openrc-0.3.0-r1.ebuild:
  fix bugs #240350, #240437. Fix printf warnings. Remove dead patch.

  06 Oct 2008; Doug Goldstein <cardoe@gentoo.org>
  +files/0.2.5/0002-useful-functions.patch, +files/0.2.5/0003-KV.patch,
  files/9999/0002-useful-functions.patch, +files/0.2.5/0001-msg-style.patch,
  -openrc-0.2.2.ebuild, -openrc-0.2.3.ebuild, -openrc-0.2.4.ebuild,
  -openrc-0.2.4-r1.ebuild, openrc-0.2.5.ebuild:
  create 0.2.5 patch directory and copy current patches there. Use that
  directory for 0.2.5. Update live ebuild 0002 patch to current patch as the
  original one doesn't apply. bug #238904. Remove outdated versions.

*openrc-0.3.0 (06 Oct 2008)

  06 Oct 2008; Doug Goldstein <cardoe@gentoo.org>
  +files/0.3.0/0001-Fix-a-segfault-when-profile.env-does-not-exist.patch,
  +files/0.3.0/0002-kenv-is-not-always-available.patch,
  +files/0.3.0/0004-add-a-softlevel-function-to-the-API-so-people-dont.patch
  ,
  +files/0.3.0/0003-This-reverts-commit-0e2f160c95b15e95f3885e3f5a3670ec.pat
  ch, +files/0.3.0/0005-add-back-KV_-funcs.patch, +openrc-0.3.0.ebuild: