@@ -22,7 +22,8 @@ EBUILD openrc-0.2.5.20080904.ebuild 8898 RMD160 230a1f98676b49bf77efd8158d6a322d
 EBUILD openrc-0.2.5.20080922.ebuild 8967 RMD160 1504c0fe56e98f5de3633d56f2f3af49f4de77e5 SHA1 6312343ff9f769f0199c5bcd1246da42406dd4c8 SHA256 72ec0fef6aa6b44e959844d34abe92d58082138e1aef89ef934e8bc704677af2
 EBUILD openrc-0.2.5.ebuild 9024 RMD160 fb7d2b6fd10ac87a66fe554b2480e75aa8ff438b SHA1 c5a8636fbe4c70ba8762aa46c9f0d5e3c6bcbb38 SHA256 69f907e50ec99c0c55a0a84addb23d75ce6bf617678f13f519a684697b443409
 EBUILD openrc-0.3.0-r1.ebuild 9027 RMD160 478c1507c12b6ec6356f8bc69c16a8d0f171f070 SHA1 1cba958422603b37376cd19f7c6c733c636dc0a9 SHA256 56f5c852a2fed4ef326a35a34c4f373879536755473deb11897687543b7e043c
+EBUILD openrc-0.3.0.20081113-r1.ebuild 10157 RMD160 802e4997100c2d99201a216b5296d629eabf7f00 SHA1 a3577927143592235fb98dc8dcba2222a2a4a29f SHA256 3d31ad2405d6c8e02d11c87cf648dfcddfbaafcdfe4604b5c6cb5dda49cbb627
 EBUILD openrc-0.3.0.20081113.ebuild 10072 RMD160 edcca137786f6442717ce34baaf069d71b366804 SHA1 57598a24be8286774811c5e594ecf7597b073ac9 SHA256 4766938181387309b7249322eed2fb63ed1b255327f15931ef4de69db2d9e523
 EBUILD openrc-9999.ebuild 8801 RMD160 9526d198309cd45fbad4caa2e9ddb0927da317e8 SHA1 36b347fad78a9f1caf17ca4f4c7db6e60ec73550 SHA256 9e094e45441e59f5f9b4e2d09a82b6da7b0576ba1784523245110f99057bb167
-MISC ChangeLog 8886 RMD160 c1f633c9f1cc88de69d5a9a4c4e5cd86fd97a309 SHA1 031cdd2964e7c527b013cd270557a4b30351bf44 SHA256 287c9f4f058d95e328678467fa37827208e964a1df3fdc2aa1db580a35c5dd7b
+MISC ChangeLog 9085 RMD160 2a7296466ca724a48af78a843d3a82b63b1fa62f SHA1 983f3347663967e893ffe356464f32b52d66d4be SHA256 16446065713a0984f00bd3c517e64d02d89c6f1d2d0a511d5b7ebbbc9cbe366e
 MISC metadata.xml 231 RMD160 c39b780fbbb9eb38f1ba1a0ee134231ca8e7449c SHA1 d5a4c0d0c7641c862b43e742f832bab6c69482d8 SHA256 02e8fa3806efbc7cea8bc78653397b8d59b398faca8bcfd3aabb216103cd8f4f
