@@ -2,6 +2,12 @@
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
 # $Header: /var/cvsroot/gentoo-x86/sys-apps/openrc/ChangeLog,v 1.43 2008/10/08 16:19:11 cardoe Exp $
 
+*openrc-0.3.0.20081113-r1 (24 Nov 2008)
+
+  24 Nov 2008; Daniel Robbins <drobbins@funtoo.org>
+  +openrc-0.3.0.20081113.ebuild: postinst fix, make sure that devfs
+  and dmesg are in sysinit runlevel.
+
 *openrc-0.3.0.20081113 (20 Nov 2008)
 
   20 Nov 2008; Daniel Robbins <drobbins@funtoo.org>
